Fixes to customation of ArchitectUI for mobile displays, hamburger should now be visibile and search is not black on black. Closes #292

--- a/resources/themes/architect/src/layout/header/themes/_header-dark.scss
+++ b/resources/themes/architect/src/layout/header/themes/_header-dark.scss
@@ -114,6 +114,14 @@
       }
     }
 
+    .app-header__mobile-menu {
+      .hamburger-inner,
+      .hamburger-inner::before,
+      .hamburger-inner::after {
+        background: $gray-800;
+      }
+    }
+
   }
 
 }
