--- a/resources/themes/architect/src/layout/header/themes/_header-light.scss
+++ b/resources/themes/architect/src/layout/header/themes/_header-light.scss
@@ -128,7 +128,7 @@
       .hamburger-inner,
       .hamburger-inner::before,
       .hamburger-inner::after {
-        background: rgba(255, 255, 255, .9);
+        background: $gray-800;
       }
     }
 
